# godel

./: .gitignore  .whitesource  404.html  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  Untitled.ipynb  api_reference.html  changelog.html  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: release-drafter.yml
.github/workflows/: codeql-analysis.yml  docker-run.yml  publish_docs.yml  pypi_publish.yml  release-drafter.yml  secrets-scanning.yml
docs/: api_reference.md  changelog.md
docs/user_guide/: Create Entities and Triples.ipynb  Create Triples.ipynb  Disambiguate Triples.ipynb  Quickstart.ipynb  Validating Triples.ipynb  Verification.ipynb
search/: search_index.json
src/godel/: __init__.py  api.py  models.py  query.py  schema.py
src/godel/fragments/: EntityDetail.py  EntityLink.py  EntitySummary.py  EnumConstraint.py  PredicateDetails.py  TripleWidget.py
src/godel/queries/: AddTripleToEntityById.py  AdminTemplates.py  AssignValidation.py  Authenticate.py  Bounties.py  CreateEntity.py  CreateStatement.py  CreateTripleFlag.py  CreateUserFlag.py  CreateUserReport.py  CreateValidation.py  CurrentUserBlockchainData.py  CurrentUserContributions.py  CurrentUserLedgerRecords.py  CurrentUserValidationActivity.py  CurrentUserValidations.py  DeprecatedGetTripleForValidation.py  EntityByName.py  EntityContributors.py  EntityDetail.py  EntityGolden.py  EntityGoldenRedirect.py  EntityHistoryFeed.py  EntityIndex.py  EntitySearch.py  EntityType.py  FulfillTripleRequest.py  GetAuthenticationMessage.py  GetCitations.py  GetCurrentUser.py  GetEntities.py  GetPendingTripleRequest.py  GetTripleForValidation.py  (+18 more)
tests/: test_api.py
tutorials/: Authentication.ipynb  Create Entities.ipynb  Create Triple Flag.ipynb  Create Triples.ipynb  Disambiguate Triple.ipynb  Disambiguate Triples.ipynb  Validating Triples.ipynb  Verification.ipynb
user_guide/: Authentication.html  Create Entities and Triples.html  Create Entities.html  Create Triples.html  Validating Triples.html
