[tool.poetry]
name = "godel"
version = "0.3.2"
description = "Golden's Python SDK for its Protocol: Decentralized Canonical Knowledge Graph"
authors = ["aychang95"]

[tool.poetry.dependencies]
python = "^3.7.10, <3.11"
wheel = "^0.36.2"
tqdm = "^4.63.1"
sgqlc = "^16.0"
requests = "^2.27.1"
# pandas 1.4+ and numpy 1.22+ cut off support py3.7
numpy = {version="1.21.6", optional = true}
pandas = {version="1.3.5", optional = true}
web3 = {version="^5.28.0", optional = true}
jupyterlab = {version="^3.0.0", optional = true}
ipywidgets = {version="^7.6.3", optional = true}
mkdocs = {version="^1.3.0", optional = true}
mkdocs-material = {version="^8.2.9", optional = true}
mkdocstrings = {version="^0.19.0", optional = true, extras=["python"]}
mkdocs-jupyter = {version="^0.20.1", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
black = "^22.6.0"

[tool.poetry.extras]
docs = ["mkdocs-material", "mkdocstrings", "mkdocs-jupyter"]
web3 = ["web3"]
data-tools = ["jupyterlab", "ipywidgets", "pandas", "numpy"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
